We don't need --illegal-access=warn as we converge on 3.4.0